Now I have added the missing effects and tackled some of the design issues I was facing. The website is still not responsive, which I will be making it in the future.

--- a/style.css
+++ b/style.css
@@ -17,8 +17,13 @@ body {
   font-size: 15.8px;
 }
 
+.nav-links:hover {
+  color: hsl(5, 85%, 63%);
+  transition: all 0.3s ease-in-out;
+}
+
 .button {
-  margin-top: 10px;
+  margin-top: 25px;
   background-color: hsl(5, 85%, 63%);
   color: hsl(240, 100%, 5%);
   border: none;
@@ -37,28 +42,37 @@ body {
 #aside {
   background-color: hsl(240, 100%, 5%);
   padding: 26px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 #aside h2 {
   color: hsl(35, 77%, 62%);
+  font-size: 40px;
 }
 
 #aside p {
   text-decoration: none;
   color: hsl(233, 8%, 79%);
-  margin-top: 1px;
+  margin-top: 5px;
   font-size: 14.5px;
   line-height: 24px;
   letter-spacing: 0.55px;
 }
 
 #aside h3 a {
+  font-size: 21px;
   text-decoration: none;
   color: white;
 }
 
+#aside h3 a:hover {
+  color: hsl(35, 77%, 62%);
+  transition: 0.3s ease;
+}
+
 .article {
-  margin-bottom: 30px;
   padding-bottom: 24px;
   border-bottom: 0.1px solid hsl(236, 13%, 42%);
 }
@@ -72,6 +86,7 @@ body {
 .blogs {
   display: flex;
   height: 150px;
+  padding: 0 4px;
 }
 
 .blogs img {
@@ -86,6 +101,13 @@ body {
 
 .blogs h3 {
   margin-top: 12px;
+  cursor: pointer;
+  font-size: 19px;
+}
+
+.blogs h3:hover {
+  color: hsl(5, 85%, 63%);
+  transition: 0.3s ease;
 }
 
 .blogs p {
